src/app/common/autocomplete-input-text/autocomplete-input-text.component.scss
.autocomplete-input-text {
  position: relative;

  .suggestions {
    position: absolute;
    display: none;
    flex-direction: column;
    overflow: auto;
    padding: 8px 0;
    top: var(--input-height);
    max-height: 10rem;
    width: 100%;
    color: var(--on-surface-container);
    background-color: var(--surface-container);

    &.opened {
      display: flex;
    }

    option {
      cursor: pointer;
      padding: 14px 16px;
      font: var(--label-large);
      font-size: var(--body-large-size);
      font-weight: var(--body-large-weight);

      &:hover {
        color: var(--on-surface-variant);
        background-color: var(--surface-variant);
      }
    }
  }
}

